--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,62 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap')
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  width: 100%;
+  min-height: 100vh;
+  background: #000;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-image: url('./assets/images/img-22.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
+
+i{
+cursor: pointer;
+user-select: none;
+ }
+ul{
+  list-style: none;
+ }
+ .container{
+  width: 360px;
+  position: relative; 
+  border-radius: 15px;
+ }
+ 
+ main{
+  width: 360px;
+  border-radius: 15px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  box-shadow: 0 0 10px rgba(2, 7, 7, 0.5); 
+  overflow: hidden;
+  position: relative;
+  backdrop-filter: blur(4px);
+}
+
+input[type="range"]{
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
+ background: #e5e5e5;
+ border-radius: 50px;
+}
+input[type="range"]::-webkit-slider-thumb{
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  background: #4286f4;
+  border-radius: 50%;
+  cursor: grab;
+  width: 10px;
+  height: 10px;
+ }
